# MengASR2

./: .gitignore  LICENSE  README.md  batch_transcribe.bat  batch_transcribe.py  pyproject.toml  requirements.txt
config/: README.md  mengasr-qwen3.yaml  mengasr-qwen3.yaml.example  mengasr.yaml  mengasr.yaml.example
deploy/: README.md  constraints-qwen3.txt  constraints.txt
deploy/systemd/: mengasr-listener.service  mengasr-listener.service.example  mengasr-worker-qwen3.service  mengasr-worker-qwen3.service.example  mengasr-worker.service  mengasr-worker.service.example  mengasr.service
docs/: batch-transcribe.md
scripts/: dl_qwen3_ms.py  download_models.sh  download_qwen3.py  download_qwen3_hf.py  install.sh  start.sh
src/mengasr_client/: __init__.py  cli.py  client.py
src/mengasr_server/: __init__.py  __main__.py  app.py  audio.py  auth.py  config.py  config_schema.py  jobs.py  listener.py  schemas.py  worker.py  worker_client.py
src/mengasr_server/backends/: base.py  mimo.py  qwen3.py
src/mengasr_server/diarization/: pyannote_engine.py
src/mengasr_server/formatters/: srt.py  vtt.py
src/mengasr_server/timestamps/: vad.py
