[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mengasr2"
version = "0.3.0"
description = "本地 ASR HTTP 服务 — MiMo-V2.5-ASR on GPU"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "MengXiangxi" }]

[project.optional-dependencies]
client = ["httpx>=0.28.0"]

[project.scripts]
mengasr = "mengasr_client.cli:main"
mengasr-server = "mengasr_server.app:main"
mengasr-listener = "mengasr_server.listener:main"
mengasr-worker = "mengasr_server.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mengasr_server", "src/mengasr_client"]
